archive/deploy/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
  labels:
    tier: frontend
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      tier: frontend
  template:
    metadata:
      labels:
        tier: frontend
    spec:
      serviceAccountName: corgi-serviceaccount
      containers:
        - name: nginx
          volumeMounts:
            - name: shared-data
              mountPath: /var/www/html
        - name: corgi
          image: corgi
          ports:
            - containerPort: 9000
              protocol: TCP
          readinessProbe:
            tcpSocket:
              port: 9000
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            tcpSocket:
              port: 9000
            initialDelaySeconds: 10
            periodSeconds: 5
          volumeMounts:
            - name: imagemagick-config
              mountPath: /etc/ImageMagick/policy.xml
              subPath: policy.xml
            - name: supervisor-config
              mountPath: /etc/supervisor
            - name: phpfpm-config
              mountPath: /usr/local/etc/php-fpm.d/corgi.conf
              subPath: corgi.conf
            - name: phpini-config
              mountPath: /etc/php7/conf.d
            - name: phpini-config
              mountPath: /usr/local/etc/php/conf.d/local.ini
              subPath: local.ini
            - name: shared-data
              mountPath: /var/www/html
          lifecycle:
            postStart:
              exec:
                command: 
                  - /bin/sh
                  - -c
                  - |
                    mkdir -p /var/www/html \
                      && cp -R /corgi/. /var/www/html/ \
                      && chown -R www-data:www-data /var/www/html \
                      && chmod -R 755 /var/www/html
      volumes:
        - name: imagemagick-config
          configMap:
            name: imagemagick-config
        - name: phpfpm-config
          configMap:
            name: phpfpm-config
        - name: phpini-config
          configMap:
            name: phpini-config
        - name: supervisor-config
          configMap:
            name: supervisor-config
        - name: shared-data
          emptyDir: {}
