archive/deploy/base/statefulset-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: statefulset
  labels:
    tier: mariadb
spec:
  serviceName: mariadb
  selector:
    matchLabels:
      tier: mariadb
  template:
    metadata:
      labels:
        tier: mariadb
    spec:
      serviceAccountName: corgi-serviceaccount
      containers:
        - name: mariadb        
          volumeMounts:
            - name: mariadb-data
              mountPath: /var/lib/mariadb
            - name: docker-entrypoint
              mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: docker-entrypoint
          emptyDir: {}
        - name: db-init.sh
          configMap:
            name: db-init.sh
  volumeClaimTemplates:
    - metadata:
        name: mariadb-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 10Gi
