archive/deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  selector:
    app: corgi
    tier: frontend
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
---
# Client service for connecting to any Mariadb instance for reads.
# For writes, you must instead connect to the primary service: mariadb-0.mariadb.
apiVersion: v1
kind: Service
metadata:
  name: mariadb-read-service
  labels:
    tier: mariadb
    app.kubernetes.io/name: mariadb
    readonly: "true"
spec:
  ports:
    - name: mariadb
      port: 3306
  selector:
    tier: mariadb
